--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "predis/predis": "^2.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
