--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "muxinc/mux-php": "^3.17",
         "predis/predis": "^2.0",
         "socialiteproviders/apple": "^5.6",
         "spatie/laravel-permission": "^5.5"
