--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2.12",
+        "algolia/algoliasearch-client-php": "^3.4",
+        "algolia/scout-extended": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-notification-channels/telegram": "^2.1",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^9.8",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
