--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "muxinc/mux-php": "^3.17",
         "predis/predis": "^2.0",
+        "pusher/pusher-php-server": "^7.2",
         "socialiteproviders/apple": "^5.6",
         "spatie/laravel-permission": "^5.5"
     },
